--- a/Portifolio-HTML-e-CSS-Curso3-aula_2/curriculo.html
+++ b/Portifolio-HTML-e-CSS-Curso3-aula_2/curriculo.html
@@ -31,13 +31,13 @@
             <h2 class="apresentacao__conteudo__titulo">Estudos</h2>
             <div class="apresentacao__conteudo__texto">
             <ul class="apresentacao__conteudo__texto">
-                <li>Curso tal - Alura Cursos <a href="linkdocertificado">com certificado</a> </li>
-                <li>Curso tal - Alura Cursos <a href="linkdocertificado">com certificado</a></li>
-                <li>Curso tal - Alura Cursos <a href="linkdocertificado">com certificado</a></li>
+                <li>Curso tal - Nome Plataforma <a href="linkdocertificado" target="_blank">com certificado</a> </li>
+                <li>Curso tal - Nome Plataforma <a href="linkdocertificado" target="_blank">com certificado</a></li>
+                <li>Curso tal - Nome Plataforma <a href="linkdocertificado" target="_blank">com certificado</a></li>
             </ul>
             </div>    
         </section>
-        <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img src="./assets/imagem.png" alt="Sua Foto  programando">
     </main> 
 
     <footer class="rodape">
