--- a/Portifolio-HTML-e-CSS-Curso3-aula_2/index.html
+++ b/Portifolio-HTML-e-CSS-Curso3-aula_2/index.html
@@ -43,7 +43,7 @@
                 </a>
             </div>
         </section>
-        <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img src="./assets/imagem.png" alt="Sua foto programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por <a href="https://www.linkedin.com/in/caio-henrique-ocon-842b59191/" target="_blank">Caio</a></p>
