Deixando site responsivo

--- a/SobreMim.html
+++ b/SobreMim.html
@@ -20,7 +20,7 @@
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, laboriosam. Aliquid esse expedita veniam quidem a velit quia, delectus nostrum voluptates, cumque autem laboriosam mollitia! Numquam eaque eveniet itaque suscipit.</p>
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam ex quisquam deleniti, fugiat omnis voluptate ad id est maiores nam optio beatae non molestiae quos placeat distinctio corporis ea ut.</p>
         </section>
-        <img src="./assets/imagem.png" alt="Sua foto  programando">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Sua foto  programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por <a href="https://www.linkedin.com/in/caio-henrique-ocon-842b59191/" target="_blank">Caio</a></p>
