--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
             conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__link" href="https://github.com/Caio0con" target="_blank">
+                <a class="apresentacao__links__navegacao" href="https://github.com/Caio0con" target="_blank">
                     <img src="./assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/caio-henrique-ocon-842b59191/" target="_blank">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/caio-henrique-ocon-842b59191/" target="_blank">
                     <img src="./assets/linkedin.png">
                     linkedin
                 </a>
-                <a class="apresentacao__links__link" href="https://twitch.tv/ocon_tv" target="_blank">
+                <a class="apresentacao__links__navegacao" href="https://twitch.tv/ocon_tv" target="_blank">
                     <img src="./assets/twitch.png">
                     Twitch
                 </a>
             </div>
         </section>
-        <img src="./assets/imagem.png" alt="Sua foto programando">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Sua foto programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por <a href="https://www.linkedin.com/in/caio-henrique-ocon-842b59191/" target="_blank">Caio</a></p>
