site responsivo finalizado

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Sua foto programando">
+        <img class="apresentacao__imagem" src="assets/Imagem.png" alt="Sua foto programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por <a href="https://www.linkedin.com/in/caio-henrique-ocon-842b59191/" target="_blank">Caio</a></p>
