--- a/curriculo.html
+++ b/curriculo.html
@@ -37,7 +37,7 @@
             </ul>
             </div>    
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Sua Foto  programando">
+        <img class="apresentacao__imagem" src="assets/Imagem.png" alt="Sua Foto  programando">
     </main> 
 
     <footer class="rodape">
